fixed pricing panels on small screens

--- a/public/less/homepage.less
+++ b/public/less/homepage.less
@@ -154,7 +154,7 @@ a {
   font-family: proxima-nova-alt, "Proxima Nova Alt", sans-serif;
 }
 
-button, .btn, .site-nav a, #pricing-panel b, #pricing-panel ul, .team b, footer small a {
+button, .btn, .site-nav a, .team b, footer small a {
   font-size: 12px;
   line-height: 1;
   font-weight: 600;
@@ -977,133 +977,111 @@ h1:after, h2:after {
 /**
  *   Pricing
  */
-#pricing-panel {
+.pricing-panel {
   padding: 80px 0;
   background: #231f20;
 }
 
-#pricing-panel h1 {
+.pricing-panel__content {
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  max-width: 1120px;
+}
+
+.pricing-panel__heading {
   color: #fff;
+  font-size: 46px;
+  margin-bottom: 75px;
 }
 
-#pricing-panel .wrap { /* fix .half */
-  overflow: hidden;
+.pricing-panel__price-plans {
+  margin: -20px -20px 70-20px;
+
+  display: flex;
+  flex-wrap: wrap;
 }
 
-#pricing-panel article {
-  position: relative;
-  float: left;
-  width: 540px;
-  margin: 60px 40px 120px 0;
+.price-plan {
+  flex: 1 0.1 345px;
+  margin: 20px;
 
-  background: #2a2527;
-  border-radius: 6px;
-}
-
-#pricing-panel .half + .half article {
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-#pricing-panel .half + .half > h1 {
-  margin-left: 20px;
-}
-
-#pricing-panel article + article {
-  margin-right: 0 !important;
-}
-
-#pricing-panel header {
-  padding: 25px 0;
-
-  background: #373233;
-  border-radius: 5px 5px 0 0;
+  color: #b2aaad;
   text-align: center;
 }
 
-#pricing-panel b {
+.price-plan__header {
+  border-radius: 5px 5px 0 0;
+  padding: 25px;
   color: #fff;
-  opacity: .8;
+  text-transform: uppercase;
 }
 
-#pricing-panel .purple header {
-  background: #6c3eb2;
+.price-plan__header--free {
+  background-color: #935991;
 }
 
-#pricing-panel .mix header {
-  background: #935991;
+.price-plan__header--pro {
+  background-color: #ea9448;
 }
 
-#pricing-panel .orange header {
-  background: #ea9448;
+.price-plan__name {
+  margin-bottom: 15px;
+
+  opacity: 0.8;
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: 2px;
 }
 
-#pricing-panel h1 {
-  display: block;
-  padding: 15px 0 5px;
-  margin: 0;
+.price-plan__price {
+  opacity: 1;
+  padding-bottom: 5px;
 
   font-size: 46px;
+  line-height: 48px;
+  font-family: DP,sans-serif;
+  font-weight: 400;
+  letter-spacing: -1px;
 }
 
-#pricing-panel header h1:after {
-  display: none;
+.price-plan__units {
+  opacity: 0.8;
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: 2px;
 }
 
-#pricing-panel h1 b {
-  display: block;
-  padding-top: 10px;
+.price-plan__body {
+  background-color: #2a2527;
+  border-radius: 0 0 5px 5px;
+  height: 260px;
+  padding: 15px;
 
-  opacity: .6;
-}
-
-#pricing-panel ul {
-  padding-top: 15px;
-
-  text-align: center;
-}
-
-#pricing-panel li {
-  color: #b2aaad;
+  text-transform: uppercase;
+  font-size: 12px;
   line-height: 35px;
+  font-weight: 600;
+  letter-spacing: 2px;
 }
 
-body.wordy #pricing-panel li {
-  line-height: 32px;
+.price-plan__body b {
+  color: #fff;
 }
 
-#pricing-panel li b, #pricing-panel .btn b {
-  opacity: 1;
+.price-plan__button {
+  margin-top: 40px;
+  width: 100%;
 }
 
-#pricing-panel .btn {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: -80px;
-
-  text-align: center;
-}
-
-#pricing-panel .ghost .btn {
-  background: #4f484b;
-  color: #c2b9bd !important; /*uwotm7*/
-}
-
-#pricing-panel .fine-print {
+.pricing-panel__fine-print {
   color: white;
   opacity: 0.4;
 }
 
-#pricing-panel .legal {
-  margin-top: 20px;
-
-  a {
-    color: inherit;
-  }
+.pricing-panel__fine-print a {
+  color: inherit;
 }
-
-
 
 /**
  *   Apps panel
